# termapy

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  README.md  commands.html  custom-buttons.html  demo.html  getting-started.html  index.html  mkdocs.yml  protocol-testing.html  pyproject.toml  reddit_post.md  scripting.html  toolbar.html  tox.ini  writing-plugins.html
.claude/: settings.json
.github/workflows/: docs.yml  publish.yml  tests.yml
examples/plugins/: at_test.py  hello.py  ping.py  timestamp.py
src/terapy/: __init__.py  app.py  plugins.py  repl.py
src/terapy/builtins/: print.py  seq.py  stop.py
src/termapy/: __main__.py  app.py  capture.py  cli.py  config.py  crc_codegen.py  defaults.py  demo.py  dialogs.py  folders.py  help.md  migration.py  plugins.py  port_control.py  proto_debug.py  proto_runner.py  protocol.py  protocol_crc.py  protocol_viz.py  repl.py  scripting.py  serial_engine.py  serial_port.py  smoke.txt
src/termapy/builtins/: cfg.py  cfg_auto.py  echo.py  grep.py  help.py  os_cmd.py  print.py  proto.py  seq.py  show.py  stop.py
src/termapy/builtins/crc/: sum16.py  sum8.py
src/termapy/builtins/demo/: .gitignore  demo.cfg  demo.json
src/termapy/builtins/demo/plugin/: cmd.py  probe.py  temp_plot.py
src/termapy/builtins/demo/plugins/: cmd.py  probe.py  temp_plot.py
src/termapy/builtins/demo/proto/: at_test.pro  bitfield_inline.pro  modbus_inline.pro  modbus_test.pro
src/termapy/builtins/demo/run/: at_demo.run  doc_screenshots.run  expect_test.run  gps_demo.run  smoke_test.run  status_check.run  var_demo.run  welcome.run
src/termapy/builtins/demo/scripts/: at_demo.run  expect_test.run  smoke_test.run  status_check.run  var_demo.run
src/termapy/builtins/demo/viz/: at_view.py  bitfield_view.py  modbus_view.py
src/termapy/builtins/plugins/: bin_cap.py  cap.py  cfg.py  cfg_auto.py  cls.py  confirm.py  echo.py  edit.py  env_var.py  eol.py  exit.py  grep.py  help.py  import_cmd.py  include.py  info.py  os_cmd.py  ping.py  port.py  print.py  proto.py  rprint.py  run_edit.py  seq.py  show.py  ss.py  ss_dir.py  stop.py  text_cap.py  timeit.py  var.py  ver.py  verbose.py  xfer.py  xmodem_xfer.py  ymodem_xfer.py
src/termapy/builtins/viz/: hex_view.py  modbus_view.py  text_view.py
src/termapy/help/: commands.md  config.md  custom-buttons.md  data-capture.md  demo.md  device-help.md  file-transfer.md  getting-started.md  index.md  installation.md  protocol-testing.md  scripting.md  serial-tools.md  toolbar.md  using-git.md  variables.md  writing-plugins.md
src/termapy/html/: 404.html  commands.html  config.html  custom-buttons.html  data-capture.html  demo.html  device-help.html  file-transfer.html  getting-started.html  index.html  installation.html  protocol-testing.html  scripting.html  search.json  serial-tools.html  toolbar.html  using-git.html  variables.html  writing-plugins.html
src/termapy/html/search/: search_index.json
tests/: conftest.py  test_app_config.py  test_builtins.py  test_capture.py  test_cli.py  test_cli_gold.py  test_crc_codegen.py  test_defaults.py  test_demo.py  test_engine.py  test_env_var.py  test_folders.py  test_import.py  test_include.py  test_migration.py  test_plugins.py  test_port_control.py  test_proto_runner.py  test_proto_send_crc.py  test_protocol.py  test_repl_cfg.py  test_resolve_config.py  test_scripting.py  test_serial_engine.py  test_serial_port.py  test_smoke.py  test_var.py  test_vfs.py  test_xmodem.py  test_ymodem.py
tests/cli_gold/: cli_test.expected  cli_test.run
