[project]
name = "termapy"
version = "0.1.0"
description = "A TUI serial terminal with ANSI color support, built on Textual and pyserial"
requires-python = ">=3.11"
dependencies = [
    "textual[syntax]>=0.80",
    "pyserial>=3.5",
]

[tool.uv-build]
include = ["src/termapy/*.md"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
termapy = "termapy:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=termapy --cov-report=term-missing"

[tool.coverage.run]
source = ["src/termapy"]
omit = [
    "src/termapy/__init__.py",
    "src/termapy/builtins/*.py",
    "src/termapy/app.py",
    "src/termapy/dialogs.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
show_missing = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
