[project]
name = "termapy"
version = "0.38.0"
description = "A TUI serial terminal with ANSI color support, built on Textual and pyserial"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual[syntax]>=0.80",
    "pyserial>=3.5",
    "pyreadline3>=3.4; sys_platform == 'win32'",
]

[tool.uv-build]
include = ["src/termapy/*.md", "src/termapy/help/*.md", "src/termapy/html/**", "src/termapy/builtins/demo/**"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
termapy = "termapy:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=termapy --cov-report=term-missing"

[tool.coverage.run]
source = ["src/termapy"]
omit = [
    "src/termapy/__init__.py",
    "src/termapy/builtins/*.py",
    "src/termapy/app.py",
    "src/termapy/dialogs.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
show_missing = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "mkdocs-material>=9.0",
]
