[project]
name = "termapy"
version = "0.51.0"
description = "A TUI serial terminal with ANSI color support, built on Textual and pyserial"
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Chuck Bass", email = "chuck@acrocad.net"}]
keywords = ["serial", "terminal", "tui", "textual", "pyserial", "embedded", "xmodem", "ymodem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: System :: Hardware",
    "Topic :: Terminals :: Serial",
]
dependencies = [
    "textual[syntax]>=0.80",
    "pyserial>=3.5",
    "pyreadline3>=3.4; sys_platform == 'win32'",
    "pygments>=2.20.0",
    "xmodem>=0.4.7",
    "ymodem>=1.5.3",
    "textual-serve>=1.1",
]

[tool.uv-build]
include = ["src/termapy/*.md", "src/termapy/help/*.md", "src/termapy/html/**", "src/termapy/builtins/demo/**"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
termapy = "termapy:run"

[project.urls]
Homepage = "https://github.com/hucker/termapy"
Documentation = "https://hucker.github.io/termapy/"
Repository = "https://github.com/hucker/termapy"
Changelog = "https://github.com/hucker/termapy/blob/main/CHANGELOG.md"
Issues = "https://github.com/hucker/termapy/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=termapy --cov-report=term-missing"

[tool.coverage.run]
source = ["src/termapy"]
omit = [
    "src/termapy/__init__.py",
    "src/termapy/builtins/*.py",
    "src/termapy/app.py",
    "src/termapy/dialogs.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
show_missing = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
